samples/_failures_safe/1761633782_d97f1c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_882f36cf.c: In function ‘main’:
./samples/SAFE/__tmp_882f36cf.c:161:17: error: ‘read’ undeclared (first use in this function); did you mean ‘fread’?
  161 |     int cols2 = read
      |                 ^~~~
      |                 fread
./samples/SAFE/__tmp_882f36cf.c:161:17: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_882f36cf.c:161:5: error: expected ‘,’ or ‘;’ at end of input
  161 |     int cols2 = read
      |     ^~~
./samples/SAFE/__tmp_882f36cf.c:161:5: error: expected declaration or statement at end of input
